Fix output and small logical errors in A2

--- a/Assignment 2/Assignment_2_190906250.ipynb
+++ b/Assignment 2/Assignment_2_190906250.ipynb
@@ -44,7 +44,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "xNRer4Oz-Mxd"
       },
@@ -80,20 +80,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "UAPTE5Jj-RdK",
-        "outputId": "2118f9a4-afcd-4ca9-a6f0-26321fdb6a63"
+        "outputId": "70705b82-515b-455e-bfa7-a21c28ee27ad"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Drive already mounted at /content/gdrive; to attempt to forcibly remount, call drive.mount(\"/content/gdrive\", force_remount=True).\n"
+            "Mounted at /content/gdrive\n"
           ]
         }
       ],
@@ -105,13 +105,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "czZDsYDBC7uW",
-        "outputId": "76e42b78-eb58-43d8-f416-2d7bad1220e2"
+        "outputId": "c55977e6-d62f-48c6-fed2-597c9dd1f263"
       },
       "outputs": [
         {
@@ -150,13 +150,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "EjcdUke5sBNW",
-        "outputId": "d194a8f9-f760-4975-e395-541930cdc618"
+        "outputId": "f874fb57-6031-4e41-f03e-d1deb8c78ad1"
       },
       "outputs": [
         {
@@ -174,7 +174,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 8
+          "execution_count": 4
         }
       ],
       "source": [
@@ -221,13 +221,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "MRjMM7eXu8lL",
-        "outputId": "3f4ce02e-cdef-425a-8d0a-4e8a4b478fd7"
+        "outputId": "b8342b3d-7824-4f2b-dc90-4384a408d235"
       },
       "outputs": [
         {
@@ -245,13 +245,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "zuNYcyCPvODO",
-        "outputId": "6acf3032-79a0-4287-83f8-56880745244e"
+        "outputId": "c6269df6-4866-4348-8a7c-d1ca3d7ddc5f"
       },
       "outputs": [
         {
@@ -287,7 +287,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "metadata": {
         "id": "e2jsuMkkNswd"
       },
@@ -316,13 +316,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 8,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "jXpFn4Anh-bF",
-        "outputId": "e08f091c-2cf9-43c0-fb28-e9e6f5a2662e"
+        "outputId": "1d7aadd4-b5b8-45eb-b3c4-323d2f0ad95a"
       },
       "outputs": [
         {
@@ -361,7 +361,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 9,
       "metadata": {
         "id": "402y-_ZUleyh"
       },
@@ -384,10 +384,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 10,
       "metadata": {
         "id": "wJccR82Y66k1",
-        "outputId": "2b43f6dc-ad18-4b75-dd1f-4cfbb971722c",
+        "outputId": "946ca12e-e238-47ff-d49d-07817f4d7f38",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -424,10 +424,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 11,
       "metadata": {
         "id": "YqeMGpCJ66k1",
-        "outputId": "5064eaae-5de9-4bd3-a340-195e51769377",
+        "outputId": "8bdcdb60-aeec-4e10-d000-9c6a4527bcec",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -478,13 +478,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 12,
       "metadata": {
         "id": "9_xLWdQk66k1",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "0621dfe2-04f4-482c-bb2d-d99f8889698e"
+        "outputId": "cf07f13a-ff97-4891-ce80-4a48783e514c"
       },
       "outputs": [
         {
@@ -492,8 +492,8 @@
           "name": "stdout",
           "text": [
             "Accuracy 'none': 0.7175\n",
-            "Accuracy 'l1': 0.6975\n",
-            "Accuracy 'l2': 0.69\n"
+            "Accuracy 'l1': 0.7\n",
+            "Accuracy 'l2': 0.6875\n"
           ]
         }
       ],
@@ -517,6 +517,17 @@
     },
     {
       "cell_type": "markdown",
+      "source": [
+        "The penalty in this example attempts to reduce over-fitting. As can be seen from the results, penalty 'none' has the highest accuracy, meaning that not compensating for over-fitting has the highest accuracy, and is the ideal situation.\n",
+        "\n",
+        "This can be due to the fact that the training data and testing data weren't the same, and as such, over-fitting doesn't solve the problem."
+      ],
+      "metadata": {
+        "id": "0C_O_ZJI6INi"
+      }
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "Fdd-Gw8o66k1"
       },
@@ -537,22 +548,22 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 13,
       "metadata": {
         "id": "migVR_P666k1",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "3ee12947-7a05-40d3-94c5-8801d6f94394"
+        "outputId": "4c7de31a-598f-462d-9f4d-78a09a638ff6"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Accuracy 'none': 0.7925\n",
-            "Accuracy 'l1': 0.8025\n",
-            "Accuracy 'l2': 0.8025\n"
+            "Accuracy 'none': 0.7875\n",
+            "Accuracy 'l1': 0.805\n",
+            "Accuracy 'l2': 0.8\n"
           ]
         }
       ],
@@ -566,6 +577,21 @@
         "  mean = np.mean(predicted ==  labels_test)\n",
         "  print(f\"Accuracy '{pen}': {mean}\")"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "TF-IDF stands for \"Term Frequency\" and \"Inverse Document Frequency\".\n",
+        "\n",
+        "Term Frequency is used to normalise the frequency of words that are found in a document. Longer documents have a lot more words, but relative to the document, a word may actually not be that common - regardless, a word in a large document might have a high count compared to a small document, even if the word in the first document is way less common. Therefore, the amount of a word in a document, is divided by the total amount of words in a document.\n",
+        "\n",
+        "Inverse Document Frequency is used to give weighting to words that may indicate the general topic over a group of documents. A word that appears many times in a small amount of documents will give a relevant description of the topic of the documents. \n",
+        "\n",
+        "Apply TF-IDF to the dataset increases the accuracy of each penalty by a bit under 10%, which is expected from the explainations given above."
+      ],
+      "metadata": {
+        "id": "2ynOXLzsniNE"
+      }
     },
     {
       "cell_type": "markdown",
@@ -587,20 +613,22 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 17,
       "metadata": {
         "id": "xf3fSX2fpPb1",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "3652d2bb-617a-40de-b0e9-58fc84686d5c"
+        "outputId": "4e8a8d88-91b7-49a2-f022-b1b2d9471f47"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Accuracy 'none': 0.6425\n"
+            "max_iterations=1000, count=100\n",
+            "Accuracy 'none': 0.715\n",
+            "\n"
           ]
         },
         {
@@ -615,7 +643,9 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Accuracy 'none': 0.6425\n"
+            "max_iterations=1600, count=500\n",
+            "Accuracy 'none': 0.735\n",
+            "\n"
           ]
         },
         {
@@ -630,19 +660,45 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Accuracy 'none': 0.6425\n",
-            "Accuracy 'none': 0.6425\n",
-            "Accuracy 'none': 0.6425\n",
-            "Accuracy 'l1': 0.6425\n",
-            "Accuracy 'l1': 0.6425\n",
-            "Accuracy 'l1': 0.6425\n",
-            "Accuracy 'l1': 0.6425\n",
-            "Accuracy 'l1': 0.6425\n",
-            "Accuracy 'l2': 0.6425\n",
-            "Accuracy 'l2': 0.6425\n",
-            "Accuracy 'l2': 0.6425\n",
-            "Accuracy 'l2': 0.6425\n",
-            "Accuracy 'l2': 0.6425\n"
+            "max_iterations=1600, count=1000\n",
+            "Accuracy 'none': 0.77\n",
+            "\n",
+            "max_iterations=1600, count=1500\n",
+            "Accuracy 'none': 0.7925\n",
+            "\n",
+            "max_iterations=1600, count=2000\n",
+            "Accuracy 'none': 0.8325\n",
+            "\n",
+            "max_iterations=1000, count=100\n",
+            "Accuracy 'l1': 0.71\n",
+            "\n",
+            "max_iterations=1600, count=500\n",
+            "Accuracy 'l1': 0.7975\n",
+            "\n",
+            "max_iterations=1600, count=1000\n",
+            "Accuracy 'l1': 0.8\n",
+            "\n",
+            "max_iterations=1600, count=1500\n",
+            "Accuracy 'l1': 0.8025\n",
+            "\n",
+            "max_iterations=1600, count=2000\n",
+            "Accuracy 'l1': 0.8025\n",
+            "\n",
+            "max_iterations=1000, count=100\n",
+            "Accuracy 'l2': 0.7075\n",
+            "\n",
+            "max_iterations=1600, count=500\n",
+            "Accuracy 'l2': 0.7775\n",
+            "\n",
+            "max_iterations=1600, count=1000\n",
+            "Accuracy 'l2': 0.7975\n",
+            "\n",
+            "max_iterations=1600, count=1500\n",
+            "Accuracy 'l2': 0.8025\n",
+            "\n",
+            "max_iterations=1600, count=2000\n",
+            "Accuracy 'l2': 0.8025\n",
+            "\n"
           ]
         }
       ],
@@ -651,15 +707,27 @@
         "\n",
         "for pen in penalties:\n",
         "  for count in count_vector_sizes:\n",
-        "    max_iterations = 1000 if count < 100 else 1600\n",
+        "    max_iterations = 1000 if count <= 100 else 1600\n",
         "    classifier = Pipeline(get_pipeline_arr(pen, count, True, max_iterations))\n",
         "    classifier.fit(pre_processed_reviews_train, labels_train)\n",
         "\n",
         "    docs_test = pre_processed_reviews_test\n",
-        "    predicted = text_classifier1.predict(docs_test)\n",
-        "    mean = np.mean(predicted ==  labels_test)\n",
-        "    print(f\"Accuracy '{pen}': {mean}\")"
+        "    predicted = classifier.predict(docs_test)\n",
+        "    mean = np.mean(predicted == labels_test)\n",
+        "    print(f\"max_iterations={max_iterations}, count={count}\")\n",
+        "    print(f\"Accuracy '{pen}': {mean}\\n\")"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "The max feature sizes defines how many most-commonly occuring words are used to classify the document. If max_features = n, then the model will consider the top n most commonly occuring words in the document.\n",
+        "\n",
+        "By varrying the maximum feature size, it's evident that this being higher increases the accuracy. Trivialy, increasing the amount of words that are used in the classification of the model ensures that the resultant classification is accurate. Increasing the maximum feature size does substantially increase the computation time however."
+      ],
+      "metadata": {
+        "id": "yKu2iw8Ms5Wr"
+      }
     }
   ],
   "metadata": {
